Use PIX_FMT_BGR24 for the AviSynth demuxer, instead of RGB24.

Partial fix for ticket #2412 in that using PIX_FMT_BGR24 fixes the
swapped channels issue when using scripts serving RGB24.

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>